[gd_scene load_steps=52 format=2]

[ext_resource path="res://sprite/zombies/femalezombie/Dead (11).png" type="Texture" id=1]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (4).png" type="Texture" id=2]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (3).png" type="Texture" id=3]
[ext_resource path="res://sprite/zombies/femalezombie/Walk (4).png" type="Texture" id=4]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (6).png" type="Texture" id=5]
[ext_resource path="res://sprite/zombies/femalezombie/Walk (3).png" type="Texture" id=6]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (4).png" type="Texture" id=7]
[ext_resource path="res://sprite/zombies/femalezombie/Attack (2).png" type="Texture" id=8]
[ext_resource path="res://sprite/zombies/femalezombie/Attack (8).png" type="Texture" id=9]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (9).png" type="Texture" id=10]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (1).png" type="Texture" id=11]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (7).png" type="Texture" id=12]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (1).png" type="Texture" id=13]
[ext_resource path="res://sprite/zombies/femalezombie/Walk (5).png" type="Texture" id=14]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (6).png" type="Texture" id=15]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (11).png" type="Texture" id=16]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (5).png" type="Texture" id=17]
[ext_resource path="res://sprite/zombies/femalezombie/Attack (6).png" type="Texture" id=18]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (8).png" type="Texture" id=19]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (13).png" type="Texture" id=20]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (2).png" type="Texture" id=21]
[ext_resource path="res://sprite/zombies/femalezombie/Walk (6).png" type="Texture" id=22]
[ext_resource path="res://sprite/zombies/femalezombie/Walk (10).png" type="Texture" id=23]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (5).png" type="Texture" id=24]
[ext_resource path="res://sprite/zombies/femalezombie/Walk (9).png" type="Texture" id=25]
[ext_resource path="res://sprite/zombies/femalezombie/Attack (1).png" type="Texture" id=26]
[ext_resource path="res://sprite/zombies/femalezombie/Walk (1).png" type="Texture" id=27]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (8).png" type="Texture" id=28]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (10).png" type="Texture" id=29]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (7).png" type="Texture" id=30]
[ext_resource path="res://sprite/zombies/femalezombie/Attack (5).png" type="Texture" id=31]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (3).png" type="Texture" id=32]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (9).png" type="Texture" id=33]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (14).png" type="Texture" id=34]
[ext_resource path="res://sprite/zombies/femalezombie/Walk (2).png" type="Texture" id=35]
[ext_resource path="res://sprite/zombies/femalezombie/Attack (4).png" type="Texture" id=36]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (12).png" type="Texture" id=37]
[ext_resource path="res://sprite/zombies/femalezombie/Walk (8).png" type="Texture" id=38]
[ext_resource path="res://sprite/zombies/femalezombie/Attack (7).png" type="Texture" id=39]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (15).png" type="Texture" id=40]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (12).png" type="Texture" id=41]
[ext_resource path="res://sprite/zombies/femalezombie/Dead (2).png" type="Texture" id=42]
[ext_resource path="res://sprite/zombies/femalezombie/Idle (10).png" type="Texture" id=43]
[ext_resource path="res://sprite/zombies/femalezombie/Attack (3).png" type="Texture" id=44]
[ext_resource path="res://sprite/zombies/femalezombie/Walk (7).png" type="Texture" id=45]
[ext_resource path="res://script/FemaleZombie.gd" type="Script" id=46]
[ext_resource path="res://audio/hurt_sound.wav" type="AudioStream" id=47]
[ext_resource path="res://audio/HurtZombieSound.wav" type="AudioStream" id=48]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 21 ), ExtResource( 32 ), ExtResource( 2 ), ExtResource( 24 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 10 ), ExtResource( 43 ), ExtResource( 16 ), ExtResource( 37 ), ExtResource( 20 ), ExtResource( 34 ), ExtResource( 40 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 42 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 5 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 33 ), ExtResource( 29 ), ExtResource( 1 ), ExtResource( 41 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 35 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 22 ), ExtResource( 45 ), ExtResource( 38 ), ExtResource( 25 ), ExtResource( 23 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 8 ), ExtResource( 44 ), ExtResource( 36 ), ExtResource( 31 ), ExtResource( 18 ), ExtResource( 39 ), ExtResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56.7772, 76.1794 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.7569, 10 )

[node name="FemaleZombie" type="Node2D"]
position = Vector2( 151.453, 473.958 )
script = ExtResource( 46 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -11.9081, -25.5733 )
scale = Vector2( 0.461357, 0.469482 )
frames = SubResource( 1 )
animation = "attack"
frame = 2
playing = true

[node name="Damage" type="Area2D" parent="."]
position = Vector2( 1.45089, 2.85562 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
position = Vector2( 9.64378, 21.9303 )
shape = SubResource( 2 )

[node name="Death" type="Area2D" parent="."]
position = Vector2( 6.10352e-05, 1.7818 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2( 10.3859, -67.4574 )
shape = SubResource( 3 )

[node name="HurtZombieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 48 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 47 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
[connection signal="body_entered" from="Death" to="." method="_on_Death_body_entered"]
